macosx app built scripts updated for JRE21 and universal binary