@@ -29,7 +29,7 @@ This file contains the script to bundle the DataWarrior application for OSX.
     <property name="runtime" value="jre/universal.jre/Contents/Home"/>
 
     <path id="runclasspathref">
-        <fileset dir="/Users/thomas/dev/datawarrior" includes="datawarriorlauncher.jar" />
+        <fileset dir="/Users/thomas/dev/local/datawarrior" includes="datawarriorlauncher.jar" />
     </path>
 
     <!-- Bundle target -->
@@ -120,9 +120,16 @@ This file contains the script to bundle the DataWarrior application for OSX.
           <!-- Workaround as com.apple.mrj.application.apple.menu.about.name property may no longer work -->
           <option value="-Xdock:name=${bundle.name}"/>
 
-          <option value="-Dapple.laf.useScreenMenuBar=true"/>
           <option value="-Dcom.apple.macos.use-file-dialog-packages=true"/>
-          <option value="-Dcom.apple.macos.useScreenMenuBar=true"/>
+
+          <option value="--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED"/>
+          <option value="--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED"/>
+          <option value="--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED"/>
+
+<!--
+          <option value="-Dapple.laf.useScreenMenuBar=true"/>
+-->
+
           <option value="-Dcom.apple.mrj.application.apple.menu.about.name=${bundle.name}"/>
           <option value="-Dcom.apple.smallTabs=true"/>
           <option value="-Dfile.encoding=UTF-8"/>
